tests/fixtures/positive/testing-quality/mock-final-class-without-mock-maker/app/build.gradle.kts
plugins {
    id("org.jetbrains.kotlin.jvm")
}

dependencies {
    testImplementation("org.mockito:mockito-core:5.12.0")
    testImplementation("junit:junit:4.13.2")
}
